# camera_detectx-ros

./: README.md
.doc/: tutorial.md  tutorial2.md
darknet_d/: CMakeLists.txt  README.md
darknet_d/config/: latest.yaml
darknet_d/launch/: darknet_d.launch  darknet_tiny_d.launch
darknet_d/src/: darknet_d.cpp  vision_darknet_detect_s.cpp
yolov5_d/: CMakeLists.txt  README.md  package.xml
yolov5_d/config/: left.yaml  leopard_left.yaml  ost.yaml  right.yaml
yolov5_d/include/: common.hpp  image_rectify.h  utils.h
yolov5_d/launch/: yolov5_d.launch
yolov5_d/src/: image_rectify.cpp  yolov5_d.cpp
